// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 1
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 2
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 3
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 4
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 1
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 2
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 3
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-6"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 4
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="ant-list ant-list-split"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-empty-text"
          >
            <div
              class="ant-empty ant-empty-normal"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      cx="32"
                      cy="33"
                      fill="#F5F5F5"
                      rx="32"
                      ry="7"
                    />
                    <g
                      fill-rule="nonzero"
                      stroke="#D9D9D9"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                        fill="#FAFAFA"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <p
                class="ant-empty-description"
              >
                No Data
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    />
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="ant-list demo-loadmore-list ant-list-split ant-list-loading"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height:53px"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 1
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 2
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 3
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 4
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 5
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
          style="padding-left:8px;padding-right:8px"
        >
          <div
            class="ant-list-item"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Title 6
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                Card content
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-lg ant-list-split ant-list-something-after-last-item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 0
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-star-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-like-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-message-o"
                      />
                    </svg>
                  </span>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-star-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-like-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-message-o"
                      />
                    </svg>
                  </span>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-star-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-like-o"
                      />
                    </svg>
                  </span>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <span
                    class="anticon"
                    role="img"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-message-o"
                      />
                    </svg>
                  </span>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div>
      <b>
        ant design
      </b>
       footer part
    </div>
  </div>
  <div
    class="ant-list-pagination"
  >
    <ul
      class="ant-pagination"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-prev"
        title="Previous Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <span
            aria-label="left"
            class="anticon anticon-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </span>
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-6"
        tabindex="0"
        title="6"
      >
        <a>
          6
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-7"
        tabindex="0"
        title="7"
      >
        <a>
          7
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-8"
        tabindex="0"
        title="8"
      >
        <a>
          8
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" ant-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <span
            aria-label="right"
            class="anticon anticon-right"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
              />
            </svg>
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
